# fbink-sys

./: .gitmodules  Cargo.toml  README.md  build.rs  wrapper.h
example/: Cargo.toml  build.sh
example/src/: main.rs
